人脸rect修改成正方形

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">face detect</string>
+    <string name="app_name">FaceSeek</string>
     <string-array name="model_array">
         <item>500m</item>
         <item>500m_kps</item>
