--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
         <item>500m_kps</item>
     </string-array>
 
+    <string-array name="yolo_model_array">
+        <item>yolov8-lite-t</item>
+        <item>yolov8-lite-s</item>
+    </string-array>
+
+    <string-array name="cpugpu_array">
+        <item>CPU</item>
+        <item>GPU</item>
+    </string-array>
 </resources>
